@@ -133,7 +133,16 @@
                     <configuration>
                        <mainClass>is.hi.hbv202g.assignment8.Main</mainClass>
                    </configuration>
-              </plugin>
+                </plugin>                   
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>3.6.3</version>
+                <configuration>
+                    <mainClass>is.hi.hbv202g.assignment8.Main</mainClass>
+                    <commandlineArgs>--module-path "%PATH_TO_FX%" --add-modules javafx.controls,javafx.graphics</commandlineArgs>
+                </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
